# Van

./: .gitignore
Distance_Uploader/: esp_bridge_server.py  esp_control_client.py
HTCO2/ATtiny402_HTCO2/: ATtiny402_HTCO2.ino  ATtiny402_HTCO2.ino.t402.20c0.mA0.v2611.map
MainPCB/: readme.md
MainPCB/Codes/: CMakeLists.txt  sdkconfig.defaults
MainPCB/Codes/main/: CMakeLists.txt  ble_manager.c  ble_manager.h  communication_manager.c  communication_manager.h  fan_manager.c  fan_manager.h  heater_manager.c  heater_manager.h  led_manager.c  led_manager.h  main.c  mppt_manager.c  mppt_manager.h  protocol.c  protocol.h  sensor_manager.c  sensor_manager.h  usb_manager.h  w5500_ethernet.c  w5500_ethernet.h
MainPCB/Codes/res/: gpio_pinout copy.h  gpio_pinout.h
MainPCB/VanManagement/: .gitignore  CMakeLists.txt  COMMAND_TEST.md  COMMUNICATION_PROTOCOL.md  Overview.md  README.md  SIMULATION_README.md  partitions.csv  sdkconfig.defaults  test_ble_intervals.c
MainPCB/VanManagement/common_includes/: CMakeLists.txt  error_manager.c  error_manager.h  gpio_pinout.h  simulation_config.h
MainPCB/VanManagement/common_includes/slave_pcb_res/: slave_pcb_error_manager.c  slave_pcb_error_manager.h  slave_pcb_state.h
MainPCB/VanManagement/communications/: CMakeLists.txt  app_main_communication_manager.c  app_main_communication_manager.h  command_parser.c  command_parser.h  protocol.c  protocol.h  slave_main_communication_manager.c  slave_main_communication_manager.h
MainPCB/VanManagement/communications/ble/: ble_manager_nimble.c  ble_manager_nimble.h  fragment_handler.c  fragment_handler.h
MainPCB/VanManagement/communications/ethernet/: ethernet_manager.c
MainPCB/VanManagement/communications/uart/: uart_multiplexer.c  uart_multiplexer.h
MainPCB/VanManagement/main/: CMakeLists.txt  Global_idea.md  Kconfig.projbuild  ble_manager_nimble.c  ble_manager_nimble.h  communication_manager.c  communication_manager.h  communication_protocol.c  communication_protocol.h  fan_manager.c  fan_manager.h  global_coordinator.c  global_coordinator.h  gpio_pinout.h  heater_manager.c  heater_manager.h  led_manager.c  led_manager.h  log_level.h  main.c  mppt_manager.c  mppt_manager.h  protocol.c  protocol.h  sensor_manager.c  sensor_manager.h  uart_multiplexer.c  uart_multiplexer.h  usb_manager.c  usb_manager.h  w5500_ethernet.c  w5500_ethernet.h
MainPCB/VanManagement/peripherals_devices/: CMakeLists.txt  LED_COMMAND_HANDLER.md  battery_manager.c  battery_manager.h  energy_simulation.c  energy_simulation.h  fan_manager.c  fan_manager.h  heater_manager.c  heater_manager.h  hood_manager.c  hood_manager.h  htco2_sensor_manager.c  htco2_sensor_manager.h  inverter_chargers_manager.c  inverter_chargers_manager.h  led_command_handler.c  led_command_handler.h  led_coordinator.c  led_coordinator.h  led_dynamic_modes.c  led_dynamic_modes.h  led_manager.c  led_manager.h  led_static_modes.c  led_static_modes.h  mppt_manager.c  mppt_manager.h  pump_manager.c  pump_manager.h  switch_manager.c  switch_manager.h  videoprojecteur_manager.c  videoprojecteur_manager.h
MainPCB/VanManagement/utils/: CMakeLists.txt  battery_parser.c  battery_parser.h  json_builder.c  json_builder.h
Python_Simulations/WaterManagment/: logic.md  water_control.py
SlavePCB/WaterManagment/: .gitignore  CMakeLists.txt  Makefile  OTA_README.md  Overview.md  README.md  lad_cell_calib_value.md  ota_upload.py  partitions.csv  sdkconfig.defaults
SlavePCB/WaterManagment/common_includes/: CMakeLists.txt  buttons.h  cases.h  devices.h  error_manager.c  error_manager.h  errors.h  gpio_pinout.h  utils.c  utils.h
SlavePCB/WaterManagment/communications/: CMakeLists.txt  communications_manager.c  communications_manager.h
SlavePCB/WaterManagment/communications/ethernet/: ethernet_manager.c  ethernet_manager.h
SlavePCB/WaterManagment/communications/i2c/: i2c_manager.c  i2c_manager.h
SlavePCB/WaterManagment/communications/uart/: uart_manager.c  uart_manager.h
SlavePCB/WaterManagment/io_drivers/: CMakeLists.txt  current_sensor.c  current_sensor.h  gpio_manager.c  gpio_manager.h  shift_register.c  shift_register.h
SlavePCB/WaterManagment/main/: CMakeLists.txt  Kconfig.projbuild  ble_comm.c  ble_comm.h  ble_dual_test.c  ble_manager_nimble.h  ble_server.c  button_manager.c  cases_manager.c  cases_manager.h  communication_manager.c  electrovalve_pump_manager.c  error_manager.c  load_cell_manager.c  load_cell_manager_simple.c  main.c  main2.c  main3.c  shift_register.c  slave_pcb.h  w5500_comm.c  w5500_comm.h  wifi_ota_manager.c  wifi_ota_manager.h
SlavePCB/WaterManagment/peripherals_devices/: CMakeLists.txt  button_executor.c  button_executor.h  buttons_manager.c  buttons_manager.h  electrovalve_executor.c  electrovalve_executor.h  electrovalves_pumps_manager.c  electrovalves_pumps_manager.h  pump_executor.c  pump_executor.h
SlavePCB/WaterManagment/test/: CMakeLists.txt  test_main.c
VanSync/: build.gradle  settings.gradle  settings.gradle.kts
VanSync/app/: build.gradle  build.gradle.kts  proguard-rules.pro
VanSync/app/src/main/: AndroidManifest.xml
VanSync/app/src/main/res/anim/: bluetooth_pulse.xml
VanSync/app/src/main/res/color/: icon_tint_selector.xml
VanSync/app/src/main/res/drawable/: battery_gauge_bg.xml  brightness_level.xml  bt_logo.xml  card_container.xml  card_header.xml  cell_bg.xml  cell_cap.xml  cell_progress.xml  energy_logo.xml  fan_logo.xml  heater_logo.xml  home_logo.xml  ic_alternator.xml  ic_battery.xml  ic_bluetooth.xml  ic_cell_level.xml  ic_cell_level_1.xml  ic_cell_level_2.xml  ic_cell_level_3.xml  ic_cell_level_4.xml  ic_cell_level_5.xml  ic_cell_off.xml  (+22 more)
VanSync/gradle/: libs.versions.toml
VanSync/gradle/wrapper/: gradle-wrapper.properties
video_projector/: .gitignore  BLE_COMMANDS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
video_projector/main/: CMakeLists.txt  Kconfig.projbuild  ble_manager.c  ble_manager.h  button_manager.c  button_manager.h  config_example.h  idf_component.yml  ir_led_manager.c  ir_led_manager.h  main.c  motor_manager.c  motor_manager.h  usb_manager.c  usb_manager.h
(+77 files in other folders)
